add all heros info, fix error

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-KakaoTalk_20221031_231512908_01.jpg
-KakaoTalk_20221031_231512908.jpg
+exosbirthdays1.jpg
+exosbirthdays2.jpg
 node_modules
 .cache
 dist
